--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -38,6 +38,7 @@ body {
       font-size: $font-size-navigation;
 
       a {
+        line-height: 0;
         padding: $padding-navigation-inner;
         color: $colour-body;
         text-decoration: none;
@@ -102,7 +103,7 @@ body {
     text-decoration: none;
     color: $colour-accent;
     transition: $transition-base;
-    border-bottom: 3px $colour-background solid;
+    border-bottom: 3px transparent solid;
 
     &:hover,
     &:focus {
