--- a/styles/_post.scss
+++ b/styles/_post.scss
@@ -32,7 +32,7 @@
     text-decoration: none;
     color: $colour-accent;
     transition: $transition-base;
-    border-bottom: 3px $colour-background solid;
+    border-bottom: 3px transparent solid;
 
     &:hover,
     &:focus {
