Font size tweaks

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -45,9 +45,10 @@ $font-stack-code: Menlo, "Consolas", "Inconsolata", Courier, monospace;
 
 /* Font sizes */
 $font-size-body: 16pt;
-$font-size-navigation: $font-size-body;
+$font-size-navigation: 14pt;
 $font-size-pagination: $font-size-body;
 $font-size-footer: $font-size-body;
+$font-size-card-header: 32pt;
 
 /* Other typography */
 $line-height-body: 1.4;
