--- a/styles/components/_subscribe.scss
+++ b/styles/components/_subscribe.scss
@@ -71,3 +71,12 @@
     }
   }
 }
+
+@media screen and (max-width: $breakpoint-small) {
+  .subscribe {
+    input[type="email"],
+    button[type="submit"] {
+      font-size: 0.75 * $font-size-body;
+    }
+  }
+}
