I hope no-one ever has to go through these commits, because they make no sense.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -38,7 +38,7 @@ $padding-post-list: 0 $padding-page-content $padding-page-content
   $padding-page-content;
 $padding-post-list-inner: $padding-base;
 
-$padding-navigation-vertical: 20px;
+$padding-navigation-vertical: $padding-page-content;
 $padding-navigation-horizontal: $padding-page-content;
 $padding-navigation-inner: 20px;
 
