--- a/styles/components/_post-card.scss
+++ b/styles/components/_post-card.scss
@@ -18,7 +18,7 @@
   }
 
   &.no-featured-image {
-    background-image: url("/assets/Trnglina--NoBanner.png");
+    background-image: url("/assets/nobanner.png");
   }
 
   .post-card-link {
