--- a/styles/components/_post-card.scss
+++ b/styles/components/_post-card.scss
@@ -43,7 +43,7 @@
       background: linear-gradient(
         6deg,
         rgba(0, 0, 0, 0.6) 0%,
-        rgba(0, 0, 0, 0) 65%
+        rgba(0, 0, 0, 0) 85%
       );
       transition: $transition-base;
     }
@@ -54,8 +54,9 @@
 
     .post-card-title {
       font-size: $font-size-card-header;
+      line-height: $line-height-card-header;
       color: $colour-card-header;
-      text-shadow: 2px 2px 8px rgba(54, 69, 79, 0.2);
+      text-shadow: 1px 1px 0px $colour-card-header-shadow;
       margin-bottom: 0;
       transition: $transition-base;
     }
@@ -63,12 +64,12 @@
     &:hover {
       &::after {
         transition: $transition-base;
-        right: -200px;
-        top: -200px;
+        right: -100px;
+        top: -100px;
       }
 
       .post-card-title {
-        text-shadow: 3px 3px 12px rgba(54, 69, 79, 0.3);
+        text-shadow: 2px 2px 4px $colour-card-header-shadow;
         transition: $transition-base;
       }
     }
