--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -22,31 +22,32 @@ body {
   }
 }
 
-.site-header {
-  overflow-x: auto;
+a {
+  color: $colour-body;
+  transition: $transition-base;
+
+  &:hover,
+  &:focus {
+    color: $colour-accent;
+    transition: $transition-base;
+  }
 }
 
-.site-nav {
+.site-header {
+  overflow-x: auto;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 2;
+  background: $colour-background;
+}
+
+.site-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: nowrap;
-
-  &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: $colour-background;
-    z-index: -999;
-  }
 
   ul.nav {
     list-style: none;
@@ -54,7 +55,8 @@ body {
     padding: $padding-navigation-vertical 0;
     margin: 0;
     font-size: 0;
-    font-weight: bold;
+    font-style: italic;
+    text-transform: lowercase;
 
     li {
       display: inline-block;
@@ -63,15 +65,6 @@ body {
       a {
         line-height: 0;
         padding: $padding-navigation-inner;
-        color: $colour-body;
-        text-decoration: none;
-        transition: $transition-base;
-
-        &:hover,
-        &:focus {
-          color: $colour-accent;
-          transition: $transition-base;
-        }
       }
     }
   }
@@ -121,20 +114,6 @@ body {
   background: darken($colour-background, 5%);
   font-size: $font-size-footer;
   text-align: center;
-
-  a {
-    text-decoration: none;
-    color: $colour-accent;
-    transition: $transition-base;
-    border-bottom: 3px transparent solid;
-
-    &:hover,
-    &:focus {
-      color: $colour-body;
-      transition: $transition-base;
-      border-color: $colour-accent;
-    }
-  }
 }
 
 @media screen and (max-width: $breakpoint-small) {
